Added alert email notification and fixed monitoring rule logic